--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,13 +1,37 @@
-<header><nav>
-    <ul class="flex">
-        <li><a [routerLink]="['/home']" [routerLinkActive]="routerActiveClassName">Home 2</a></li>
-        <li><a [routerLink]="['/home']" [routerLinkActive]="routerActiveClassName">Item 2</a></li>
-        <li><a [routerLink]="['/home']" [routerLinkActive]="routerActiveClassName">Item 3</a></li>
-        <li><a [routerLink]="['/user-panel']" [routerLinkActive]="routerActiveClassName">User</a></li>
-    </ul>
-</nav>
+<header>
+    <nav>
+        <ul class="flex">
+            <li>
+                <a
+                    [routerLink]="['/home']"
+                    [routerLinkActive]="routerActiveClassName"
+                    >Home 2</a
+                >
+            </li>
+            <li>
+                <a
+                    [routerLink]="['/home']"
+                    [routerLinkActive]="routerActiveClassName"
+                    >Item 2</a
+                >
+            </li>
+            <li>
+                <a
+                    [routerLink]="['/home']"
+                    [routerLinkActive]="routerActiveClassName"
+                    >Item 3</a
+                >
+            </li>
+            <li>
+                <a
+                    [routerLink]="['/user-panel']"
+                    [routerLinkActive]="routerActiveClassName"
+                    >User</a
+                >
+            </li>
+        </ul>
+    </nav>
 </header>
 <main>
-<router-outlet>
-</router-outlet>
+    <router-outlet> </router-outlet>
 </main>
