--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -2,28 +2,32 @@
     <nav class="flex items-center justify-between flex-wrap p-6">
         <ul class="flex">
             <li class="mr-6">
-                <a class="text-blue-500 hover:text-blue-800" 
+                <a
+                    class="text-blue-500 hover:text-blue-800"
                     [routerLink]="['/home']"
                     [routerLinkActive]="routerActiveClassName"
                     >Home 2</a
                 >
             </li>
             <li class="mr-6">
-                <a class="text-blue-500 hover:text-blue-800" 
+                <a
+                    class="text-blue-500 hover:text-blue-800"
                     [routerLink]="['/home']"
                     [routerLinkActive]="routerActiveClassName"
                     >Item 2</a
                 >
             </li>
             <li class="mr-6">
-                <a class="text-blue-500 hover:text-blue-800" 
+                <a
+                    class="text-blue-500 hover:text-blue-800"
                     [routerLink]="['/home']"
                     [routerLinkActive]="routerActiveClassName"
                     >Item 3</a
                 >
             </li>
             <li class="mr-6">
-                <a class="text-blue-500 hover:text-blue-800" 
+                <a
+                    class="text-blue-500 hover:text-blue-800"
                     [routerLink]="['/user-panel']"
                     [routerLinkActive]="routerActiveClassName"
                     >User</a
