--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -6,7 +6,7 @@
                     class="text-blue-500 hover:text-blue-800"
                     [routerLink]="['/home']"
                     [routerLinkActive]="routerActiveClassName"
-                    >Home 2</a
+                    >Dashboard</a
                 >
             </li>
             <li class="mr-6">
@@ -31,6 +31,14 @@
                     [routerLink]="['/user-panel']"
                     [routerLinkActive]="routerActiveClassName"
                     >User</a
+                >
+            </li>
+            <li class="mr-6">
+                <a
+                    class="text-blue-500 hover:text-blue-800"
+                    [routerLink]="['/admin']"
+                    [routerLinkActive]="routerActiveClassName"
+                    >Admin</a
                 >
             </li>
         </ul>
