--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -4,6 +4,14 @@
             <li class="mr-6">
                 <a
                     class="text-blue-500 hover:text-blue-800"
+                    [routerLink]="['/login']"
+                    [routerLinkActive]="routerActiveClassName"
+                    >Login</a
+                >
+            </li>
+            <li class="mr-6">
+                <a
+                    class="text-blue-500 hover:text-blue-800"
                     [routerLink]="['/home']"
                     [routerLinkActive]="routerActiveClassName"
                     >Dashboard</a
