--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -12,7 +12,7 @@
             <li class="mr-6">
                 <a
                     class="text-blue-500 hover:text-blue-800"
-                    [routerLink]="['/home']"
+                    [routerLink]="['/main/home']"
                     [routerLinkActive]="routerActiveClassName"
                     >Dashboard</a
                 >
@@ -20,7 +20,7 @@
             <li class="mr-6">
                 <a
                     class="text-blue-500 hover:text-blue-800"
-                    [routerLink]="['/home']"
+                    [routerLink]="['/main/home']"
                     [routerLinkActive]="routerActiveClassName"
                     >Item 2</a
                 >
@@ -28,7 +28,7 @@
             <li class="mr-6">
                 <a
                     class="text-blue-500 hover:text-blue-800"
-                    [routerLink]="['/home']"
+                    [routerLink]="['/main/home']"
                     [routerLinkActive]="routerActiveClassName"
                     >Item 3</a
                 >
@@ -36,7 +36,7 @@
             <li class="mr-6">
                 <a
                     class="text-blue-500 hover:text-blue-800"
-                    [routerLink]="['/user-panel']"
+                    [routerLink]="['/main/user-panel']"
                     [routerLinkActive]="routerActiveClassName"
                     >User</a
                 >
