--- a/web/src/app/modules/login/login.component.html
+++ b/web/src/app/modules/login/login.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="w-80">
     <form [formGroup]="loginForm" (submit)="login()">
         <input
             class="block w-full p-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
