--- a/web/src/app/modules/main/modules/user-panel/user-panel.component.html
+++ b/web/src/app/modules/main/modules/user-panel/user-panel.component.html
@@ -1,5 +1,9 @@
 <section>
-    <form [formGroup]="userForm" (submit)="updateUserInformation()" *ngIf="dataIsFetched; else loadingTemplate">
+    <form
+        [formGroup]="userForm"
+        (submit)="updateUserInformation()"
+        *ngIf="dataIsFetched; else loadingTemplate"
+    >
         <input
             class="block w-full p-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             name="username"
