--- a/web/src/app/modules/main/modules/admin/admin-panel.component.html
+++ b/web/src/app/modules/main/modules/admin/admin-panel.component.html
@@ -1,10 +1,14 @@
+<h1>Tournaments</h1>
 <div
+    class="dark:bg-gray-200 mb-2"
     *ngFor="
         let tournament of tournaments$ | async;
         trackBy: trackTournamentsByFn
     "
 >
-    <span [textContent]="tournament.tournamentName"></span>
+    <p [textContent]="tournament.tournamentName"></p>
+    <p [textContent]="tournament.tournamentCode"></p>
+    <p [textContent]="tournament.pointRulesCode"></p>
 </div>
 
 <form (submit)="createPointRule()" [formGroup]="pointRuleForm">
@@ -41,12 +45,16 @@
         formControlName="pointRulesCode"
         class="block w-full p-4 mt-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
     >
+        <option value="">None</option>
         <option
             *ngFor="
                 let pointRule of pointRules$ | async;
-                trackBy: trackPointRuleCodesByFn
+                trackBy: trackPointRuleCodesByFn;
+                let i = index;
             "
-            [textContent]="pointRule.pointRulesCode"
+            [value]="pointRule.pointRulesCode"
+            [textContent]="pointRule.winner + ' ' + pointRule.score"
+            [selected]="i === 0"
         ></option>
     </select>
     <button
